# Ars_Phytoglyphica

./: README.md  SOUTHERN_CALIFORNIA_SERIES.md  commit.txt  pyproject.toml
ars_phytoglyphica/: __init__.py  cli.py  elaborator.py  navigator.py  types.py
illustrations/: continental_distribution.sv  gen_charts.py  gen_type_cards.py  generate_illustrations.py
manuscripts/: ARS_PHYTOGLYPHICA_EXPANDED.md  ARS_PHYTOGLYPHICA_ILLUSTRATED.html  ENGINE.md
programs/: generate_urpflanze_svgs.py
